Maj tabCentre Actimac
Former-commit-id: bebe28650427bb85861cb6c5523fc5925331f429

--- a/htdocs/bimpcore/views/scss/entities/actimac/_variables.scss
+++ b/htdocs/bimpcore/views/scss/entities/actimac/_variables.scss
@@ -11,7 +11,7 @@ $gray:                   #B4B4B4 !default;
 $gray-light:             #DCDCDC !default;
 $gray-lighter:           #F5F5F5 !default; // #eee
 
-$brand-primary:         #335899 !default;
+$brand-primary:         #03A1E6 !default;
 $brand-secondary:       #363D49 !default;
 $brand-success:         #348C41 !default;
 $brand-info:            #3B6EA0 !default;
